# cryptid_flask

./: .env.example  .gitignore  README.md  app.py  decorators.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py
app/blueprints/: auth.py  cryptids.py
app/templates/: base.html
app/templates/auth/: login.html
app/templates/cryptids/: cryptid.html  edit_cryptid.html  index.html
static/css/: style.css
templates/: about.html  add_cryptid.html  base.html  cryptid.html  dashboard.html  edit_cryptid.html  index.html  login.html  register.html
